# genom_substr

./: .gitignore  CMakeLists.txt  README.md
opencl/: CMakeLists.txt  MakeFile  kernels.cl  main.cpp  opencl_utils.cpp  opencl_utils.h  patterns_trie.h  result_struct.h  rw_utils.cpp  rw_utils.h  transitionTable.cpp  transitionTable.h  utils.cpp  utils.h
opencl/data/: markers.csv
opencl/trash/: result_struct.cpp
src/: Bohr.cpp  Bohr.h  main.cpp  utils.cpp  utils.h
